# lxtermc

./: files.list  glib-knowledge.txt  meson.build
2024-03-05-src/: lxtermc.c  lxtermc.h  lxtermcapp.c  lxtermccfg.c  lxtermcvte.c  lxtermcwin.h  meson.build
gtk/: gresources.xml  menu.ui
po/: LINGUAS  POTFILES  en_GB.po  lxtermc-meson.pot  lxtermc.pot  meson.build  sv.po  sv_SE.utf8.po
src/: app.c  app.h  cfg.c  cfg.h  lxtermc.c  lxtermc.h  lxtermcapp.c  lxtermcapp.h  lxtermccfg.c  lxtermccfg.h  lxtermcvte.c  lxtermcvte.h  lxtermcwin.c  lxtermcwin.h  lxtermcwindow.c  lxtermcwindow.h  meson.build  tab.c  tab.h  vte.c  vte.h  win.c  win.h
